Removed border in last service card Fixed horizontal overflow causing scrollbar

--- a/directory-ui/src/components/Service.css
+++ b/directory-ui/src/components/Service.css
@@ -1,6 +1,10 @@
 
 
 @media (max-width: 575px) {
+	.table tbody tr:last-child td:last-child {
+		box-shadow: none;
+	}
+
 	.service__status {
 		width: auto;
 	}
@@ -22,8 +26,8 @@
 	}
 
 	tr {
-    flex-direction: column;
-    border: none;
+		flex-direction: column;
+		border: none;
 	}
 
 	tr:nth-child(even) td{
